--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -14,6 +14,10 @@
   "PaymentServiceProviders_desc":"Configure and manage your payment gateways",
   "SettingsTopBarTitle":"Reconciliation Settings",
   "Settings_desc":"Configure and manage your payment gateways",
+  "ErrorTopBarTitle":"Error",
+  "Error_desc":"Session expired, Reopen the application!",
+  "NotFoundTitle":"Page Not Found",
+  "NotFound_desc":"The page you are looking for doesn’t exist.",
   "FirstNavTitle":"Dashboard",
   "SecondNavTitle":"Transactions",
   "ThirdNavTitle":"Advance Payment",
@@ -23,5 +27,24 @@
   "welcomePageTitle":"Welcome To UnumPay",
   "welcomePageCaption":"You're almost there!",
   "welcomePageDesc":"To start accepting payments, please configure your payment service provider (PSP) in Settings using the account you already have. This will complete the integration and enable card payments on your store.",
-  "welcomePageButtonTitle":"Go To Configuration Setting"
+  "welcomePageButtonTitle":"Go To Configuration Setting",
+  "errorPageTitle":"Session expired, Reopen the application!",
+  "errorPageCaption":"Oops!",
+  "errorPageDesc":"You do not have permission to access the document or program that you requested.",
+  "notFoundPageTitle":"404 - Page Not Found",
+  "contact_detail_warning_desc":"Please provide the decision maker's contact information in Settings. We use this to reach out for important updates, payment issues, or verification purposes.",
+  "stats_data_loaded":"Data loaded successfully",
+  "stats_api_error":"Something went wrong",
+  "total_revenue_heading":"Total Revenue",
+  "total_revenue_tooltip_desc":"Total revenue includes all successful transactions",
+  "transactions_heading":"Transactions",
+  "transactions_tooltip_desc":"Total transactions attempted vs. successfully completed.",
+  "so_far_in":"so far in",
+  "successful_ransactions":"Successful Transactions",
+  "success_rate_tooltip_desc":"Success rate based on the ratio of successful transactions to total attempts.",
+  "success_rate_heading":"Success Rate",
+  "last_month_success_rate":"Last month success rate",
+  "in_progress_tooltip_desc":"Transactions currently in progress and not yet completed.",
+  "in_progress_heading":"In Progress Transactions",
+  "amount_of_transactions":"Amount of transactions"
 }
