--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -14,6 +14,10 @@
   "PaymentServiceProviders_desc": "Configurez et gérez vos passerelles de paiement",
   "SettingsTopBarTitle": "Paramètres de rapprochement",
   "Settings_desc": "Configurer et gérer vos passerelles de paiement",
+  "ErrorTopBarTitle":"Erreur",
+  "Error_desc":"Session expirée, rouvrez l'application !",
+  "NotFoundTitle":"Page non trouvée",
+  "NotFound_desc":"La page que vous recherchez n’existe pas.",
   "FirstNavTitle":"Tableau de bord",
   "SecondNavTitle":"Transactions",
   "ThirdNavTitle":"Paiement anticipé",
@@ -23,6 +27,27 @@
   "welcomePageTitle":"Bienvenue sur UnumPay",
   "welcomePageCaption":"Vous y êtes presque !",
   "welcomePageDesc":"Pour commencer à accepter les paiements, veuillez configurer votre fournisseur de services de paiement (PSP) dans les Paramètres en utilisant le compte que vous possédez déjà. Cela complétera l'intégration et activera les paiements par carte sur votre boutique.",
-  "welcomePageButtonTitle":"Aller aux paramètres de configuration"
+  "welcomePageButtonTitle":"Aller aux paramètres de configuration",
+  "errorPageTitle":"Session expirée, veuillez rouvrir l'application !",
+  "errorPageCaption":"Oups !",
+  "errorPageDesc":"Vous n'avez pas l'autorisation d'accéder au document ou au programme que vous avez demandé.",
+  "notFoundPageTitle":"404 - Page non trouvée",
+  "contact_detail_warning_desc": "Veuillez fournir les coordonnées du décideur dans les paramètres. Nous utilisons ces informations pour vous contacter concernant des mises à jour importantes, des problèmes de paiement ou des besoins de vérification.",
+  "stats_data_loaded":"Données chargées avec succès",
+  "stats_api_error":"Quelque chose s'est mal passé",
+  "total_revenue_heaing":"Revenu total",
+  "total_revenue_tooltip_desc":"Le revenu total inclut toutes les transactions réussies",
+  "transactions_heaing":"Transactions",
+  "transactions_tooltip_desc":"Nombre total de transactions tentées par rapport à celles réussies.",
+  "so_far_in": "jusqu’à présent en",
+  "successful_ransactions":"Transactions réussies",
+  "success_rate_tooltip_desc": "Le taux de réussite est basé sur le rapport entre les transactions réussies et le nombre total de tentatives.",
+  "success_rate_heaing": "Taux de réussite",
+  "last_month_success_rate": "Taux de réussite du mois dernier",
+  "in_progress_tooltip_desc": "Transactions en cours et non encore terminées.",
+  "in_progress_heading": "Transactions en cours",
+  "amount_of_transactions": "Nombre de transactions"
 
-}
+
+
+} 
