--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,57 +1,57 @@
 {
   "welcomeTopBarTitle": "لوحة القيادة",
   "welcome_desc": ".مرحبًا بعودتك! إليك ما يحدث مع منصة تسوية المدفوعات الخاصة بك",
-  "appName":"يونم باي",
+  "appName": "يونم باي",
   "tagline": "وساطة الدفع",
   "error": "خطأ",
-  "transactionTopBarTitle":"المعاملات",
-  "transaction_desc":".راقب وأدر جميع معاملات الدفع",
-  "advancePaymentTopBarTitle":"الدفع المقدم",
-  "advancePayment_desc":".مراقبة وإدارة جميع الدفعات المقدمة",
-  "ReconciliationReportTopBarTitle":"تقرير التسوية",
-  "ReconciliationReport_desc":".قم بمراقبة وإدارة تقارير التسوية الخاصة بك",
-  "PaymentServiceProvidersTopBarTitle":"مزودو خدمات الدفع",
-  "PaymentServiceProviders_desc":".قم بإعداد وإدارة بوابات الدفع الخاصة بك",
+  "transactionTopBarTitle": "المعاملات",
+  "transaction_desc": ".راقب وأدر جميع معاملات الدفع",
+  "advancePaymentTopBarTitle": "الدفع المقدم",
+  "advancePayment_desc": ".مراقبة وإدارة جميع الدفعات المقدمة",
+  "ReconciliationReportTopBarTitle": "تقرير التسوية",
+  "ReconciliationReport_desc": ".قم بمراقبة وإدارة تقارير التسوية الخاصة بك",
+  "PaymentServiceProvidersTopBarTitle": "مزودو خدمات الدفع",
+  "PaymentServiceProviders_desc": ".قم بإعداد وإدارة بوابات الدفع الخاصة بك",
   "SettingsTopBarTitle": "إعدادات التسوية",
   "Settings_desc": "قم بتكوين وإدارة بوابات الدفع الخاصة بك",
-  "ErrorTopBarTitle":"خطأ",
-  "Error_desc":"!انتهت الجلسة، أعد فتح التطبيق",
-  "NotFoundTitle":"الصفحة غير موجودة",
-  "NotFound_desc":".الصفحة التي تبحث عنها غير موجودة",
-  "FirstNavTitle":"لوحة التحكم",
-  "SecondNavTitle":"المعاملات",
-  "ThirdNavTitle":"الدفع المقدم",
-  "FourthNavTitle":"تقرير التسوية",
-  "FifthNavTitle":"مزودو خدمات الدفع",
+  "ErrorTopBarTitle": "خطأ",
+  "Error_desc": "!انتهت الجلسة، أعد فتح التطبيق",
+  "NotFoundTitle": "الصفحة غير موجودة",
+  "NotFound_desc": ".الصفحة التي تبحث عنها غير موجودة",
+  "FirstNavTitle": "لوحة التحكم",
+  "SecondNavTitle": "المعاملات",
+  "ThirdNavTitle": "الدفع المقدم",
+  "FourthNavTitle": "تقرير التسوية",
+  "FifthNavTitle": "مزودو خدمات الدفع",
   "SixthNavTitle": "الإعدادات",
-  "welcomePageTitle":"يونم باي مرحبًا بك في",
-  "welcomePageCaption":"!أنت على بعد خطوة واحدة فقط",
-  "welcomePageDesc":".لبدء قبول المدفوعات، يرجى تكوين مزود خدمة الدفع (PSP) في الإعدادات باستخدام الحساب الذي لديك بالفعل. سيكمل ذلك التكامل ويمكّن الدفع بالبطاقات في متجرك",
-  "welcomePageButtonTitle":"اذهب إلى إعدادات التكوين",
-  "errorPageTitle":"!انتهت الجلسة، أعد فتح التطبيق",
-  "errorPageCaption":"!عذرًا",
-  "errorPageDesc":"!ليس لديك إذن للوصول إلى المستند أو البرنامج الذي طلبته",
-  "notFoundPageTitle":"٤٠٤ - الصفحة غير موجودة",
+  "welcomePageTitle": "يونم باي مرحبًا بك في",
+  "welcomePageCaption": "!أنت على بعد خطوة واحدة فقط",
+  "welcomePageDesc": ".لبدء قبول المدفوعات، يرجى تكوين مزود خدمة الدفع (PSP) في الإعدادات باستخدام الحساب الذي لديك بالفعل. سيكمل ذلك التكامل ويمكّن الدفع بالبطاقات في متجرك",
+  "welcomePageButtonTitle": "اذهب إلى إعدادات التكوين",
+  "errorPageTitle": "!انتهت الجلسة، أعد فتح التطبيق",
+  "errorPageCaption": "!عذرًا",
+  "errorPageDesc": "!ليس لديك إذن للوصول إلى المستند أو البرنامج الذي طلبته",
+  "notFoundPageTitle": "٤٠٤ - الصفحة غير موجودة",
   "contact_detail_warning_desc": "يرجى تقديم معلومات الاتصال بصاحب القرار في الإعدادات. نستخدم هذه المعلومات للتواصل معك بشأن التحديثات المهمة أو مشكلات الدفع أو لأغراض التحقق.",
-  "stats_data_loaded":"تم تحميل البيانات بنجاح",
-  "stats_api_error":"حدث خطأ ما",
-  "total_revenue_heading":"إجمالي الإيرادات",
-  "total_revenue_tooltip_desc":"يشمل إجمالي الإيرادات جميع المعاملات الناجحة",
-  "transactions_heading":"المعاملات",
-  "transactions_tooltip_desc":".إجمالي المعاملات التي تمت محاولتها مقابل المعاملات التي اكتملت بنجاح",
+  "stats_data_loaded": "تم تحميل البيانات بنجاح",
+  "stats_api_error": "حدث خطأ ما",
+  "total_revenue_heading": "إجمالي الإيرادات",
+  "total_revenue_tooltip_desc": "يشمل إجمالي الإيرادات جميع المعاملات الناجحة",
+  "transactions_heading": "المعاملات",
+  "transactions_tooltip_desc": ".إجمالي المعاملات التي تمت محاولتها مقابل المعاملات التي اكتملت بنجاح",
   "so_far_in": "حتى الآن في",
-  "successful_ransactions":"المعاملات الناجحة",
+  "successful_ransactions": "المعاملات الناجحة",
   "success_rate_tooltip_desc": "معدل النجاح يعتمد على نسبة المعاملات الناجحة إلى إجمالي المحاولات.",
   "success_rate_heading": "معدل النجاح",
   "last_month_success_rate": "معدل النجاح للشهر الماضي",
   "in_progress_tooltip_desc": "المعاملات الجارية حالياً ولم تكتمل بعد.",
   "in_progress_heading": "المعاملات قيد التنفيذ",
   "amount_of_transactions": "عدد المعاملات",
-  "payment_trend_title":"اتجاهات الدفع",
-  "payment_trend_desc":"الإيرادات وحجم المعاملات بمرور الوقت",
-  "6months":"6 أشهر",
-  "1year":"1 سنة",
-   "chart": {
+  "payment_trend_title": "اتجاهات الدفع",
+  "payment_trend_desc": "الإيرادات وحجم المعاملات بمرور الوقت",
+  "6months": "6 أشهر",
+  "1year": "1 سنة",
+  "chart": {
     "revenue": "الإيرادات",
     "transactions": "المعاملات",
     "unumpay_fee": "يونم باي رسوم"
@@ -69,5 +69,35 @@
     "october": "أكتوبر",
     "november": "نوفمبر",
     "december": "ديسمبر"
+  },
+  "Success": "ناجح",
+  "Pending": "قيد الانتظار",
+  "recent_transactions": {
+    "title": "المعاملات الأخيرة",
+    "desc": ".أحدث معاملات الدفع عبر جميع مزوّدي خدمات الدفع"
+  },
+  "payment_providers": {
+    "title": "مزودو الدفع",
+    "desc": ".مزودو خدمات الدفع المُكوَّنون",
+    "button":"إدارة",
+    "transactions":"المعاملات",
+    "unumpay-charges":"يونم باي رسوم",
+    "Active":"نشط",
+    "Inactive":"غير نشط"
+  },
+  "time": {
+    "ago": "منذ",
+    "day": "يوم",
+    "days": "أيام",
+    "month": "شهر",
+    "months": "أشهر",
+    "year": "سنة",
+    "years": "سنوات",
+    "hour": "ساعة",
+    "hours": "ساعات",
+    "minute": "دقيقة",
+    "minutes": "دقائق",
+    "second": "ثانية",
+    "seconds": "ثواني"
   }
 }
