--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,62 +1,62 @@
 {
-  "welcomeTopBarTitle":"dashboard",
+  "welcomeTopBarTitle": "dashboard",
   "welcome_desc": "Welcome back! Here's what's happening with your payment mediation platform.",
-  "appName":"Unumpay",
+  "appName": "Unumpay",
   "tagline": "Payment Mediation",
-  "error":"error",
-  "transactionTopBarTitle":"Transactions",
-  "transaction_desc":"Monitor and manage all payment transactions.",
-  "advancePaymentTopBarTitle":"Advance Payment",
-  "advancePayment_desc":"Monitor and manage all advance payment.",
-  "ReconciliationReportTopBarTitle":"Reconciliation Report",
-  "ReconciliationReport_desc":"Monitor and manage your reconciliation reports.",
-  "PaymentServiceProvidersTopBarTitle":"Payment Service Providers",
-  "PaymentServiceProviders_desc":"Configure and manage your payment gateways",
-  "SettingsTopBarTitle":"Reconciliation Settings",
-  "Settings_desc":"Configure and manage your payment gateways",
-  "ErrorTopBarTitle":"Error",
-  "Error_desc":"Session expired, Reopen the application!",
-  "NotFoundTitle":"Page Not Found",
-  "NotFound_desc":"The page you are looking for doesn’t exist.",
-  "FirstNavTitle":"Dashboard",
-  "SecondNavTitle":"Transactions",
-  "ThirdNavTitle":"Advance Payment",
-  "FourthNavTitle":"Reconciliation Report",
-  "FifthNavTitle":"Payment Service Providers",
-  "SixthNavTitle":"Settings",
-  "welcomePageTitle":"Welcome To UnumPay",
-  "welcomePageCaption":"You're almost there!",
-  "welcomePageDesc":"To start accepting payments, please configure your payment service provider (PSP) in Settings using the account you already have. This will complete the integration and enable card payments on your store.",
-  "welcomePageButtonTitle":"Go To Configuration Setting",
-  "errorPageTitle":"Session expired, Reopen the application!",
-  "errorPageCaption":"Oops!",
-  "errorPageDesc":"You do not have permission to access the document or program that you requested.",
-  "notFoundPageTitle":"404 - Page Not Found",
-  "contact_detail_warning_desc":"Please provide the decision maker's contact information in Settings. We use this to reach out for important updates, payment issues, or verification purposes.",
-  "stats_data_loaded":"Data loaded successfully",
-  "stats_api_error":"Something went wrong",
-  "total_revenue_heading":"Total Revenue",
-  "total_revenue_tooltip_desc":"Total revenue includes all successful transactions",
-  "transactions_heading":"Transactions",
-  "transactions_tooltip_desc":"Total transactions attempted vs. successfully completed.",
-  "so_far_in":"so far in",
-  "successful_ransactions":"Successful Transactions",
-  "success_rate_tooltip_desc":"Success rate based on the ratio of successful transactions to total attempts.",
-  "success_rate_heading":"Success Rate",
-  "last_month_success_rate":"Last month success rate",
-  "in_progress_tooltip_desc":"Transactions currently in progress and not yet completed.",
-  "in_progress_heading":"In Progress Transactions",
-  "amount_of_transactions":"Amount of transactions",
-  "payment_trend_title":"Payment Trends",
-  "payment_trend_desc":"Revenue and transaction volume over time",
-  "6months":"6 Month",
-  "1year":"1 year",
+  "error": "error",
+  "transactionTopBarTitle": "Transactions",
+  "transaction_desc": "Monitor and manage all payment transactions.",
+  "advancePaymentTopBarTitle": "Advance Payment",
+  "advancePayment_desc": "Monitor and manage all advance payment.",
+  "ReconciliationReportTopBarTitle": "Reconciliation Report",
+  "ReconciliationReport_desc": "Monitor and manage your reconciliation reports.",
+  "PaymentServiceProvidersTopBarTitle": "Payment Service Providers",
+  "PaymentServiceProviders_desc": "Configure and manage your payment gateways",
+  "SettingsTopBarTitle": "Reconciliation Settings",
+  "Settings_desc": "Configure and manage your payment gateways",
+  "ErrorTopBarTitle": "Error",
+  "Error_desc": "Session expired, Reopen the application!",
+  "NotFoundTitle": "Page Not Found",
+  "NotFound_desc": "The page you are looking for doesn’t exist.",
+  "FirstNavTitle": "Dashboard",
+  "SecondNavTitle": "Transactions",
+  "ThirdNavTitle": "Advance Payment",
+  "FourthNavTitle": "Reconciliation Report",
+  "FifthNavTitle": "Payment Service Providers",
+  "SixthNavTitle": "Settings",
+  "welcomePageTitle": "Welcome To UnumPay",
+  "welcomePageCaption": "You're almost there!",
+  "welcomePageDesc": "To start accepting payments, please configure your payment service provider (PSP) in Settings using the account you already have. This will complete the integration and enable card payments on your store.",
+  "welcomePageButtonTitle": "Go To Configuration Setting",
+  "errorPageTitle": "Session expired, Reopen the application!",
+  "errorPageCaption": "Oops!",
+  "errorPageDesc": "You do not have permission to access the document or program that you requested.",
+  "notFoundPageTitle": "404 - Page Not Found",
+  "contact_detail_warning_desc": "Please provide the decision maker's contact information in Settings. We use this to reach out for important updates, payment issues, or verification purposes.",
+  "stats_data_loaded": "Data loaded successfully",
+  "stats_api_error": "Something went wrong",
+  "total_revenue_heading": "Total Revenue",
+  "total_revenue_tooltip_desc": "Total revenue includes all successful transactions",
+  "transactions_heading": "Transactions",
+  "transactions_tooltip_desc": "Total transactions attempted vs. successfully completed.",
+  "so_far_in": "so far in",
+  "successful_ransactions": "Successful Transactions",
+  "success_rate_tooltip_desc": "Success rate based on the ratio of successful transactions to total attempts.",
+  "success_rate_heading": "Success Rate",
+  "last_month_success_rate": "Last month success rate",
+  "in_progress_tooltip_desc": "Transactions currently in progress and not yet completed.",
+  "in_progress_heading": "In Progress Transactions",
+  "amount_of_transactions": "Amount of transactions",
+  "payment_trend_title": "Payment Trends",
+  "payment_trend_desc": "Revenue and transaction volume over time",
+  "6months": "6 Month",
+  "1year": "1 year",
   "chart": {
     "revenue": "Revenue",
     "transactions": "Transactions",
     "unumpay_fee": "Unumpay Fee"
   },
-   "months": {
+  "months": {
     "january": "January",
     "february": "February",
     "march": "March",
@@ -69,5 +69,36 @@
     "october": "October",
     "november": "November",
     "december": "December"
+  },
+  "Success": "Success",
+  "Pending": "Pending",
+  "recent_transactions": {
+    "title": "Recent Transactions",
+    "desc": "Latest payment transactions across all payment service providers."
+  },
+  "payment_providers": {
+    "title": "Payment Providers",
+    "desc": "Configured payment service providers.",
+    "button":"Manage",
+    "transactions":"transactions",
+    "unumpay-charges":"Unumpay Charges",
+    "Active":"Active",
+    "Inactive":"Inactive"
+  },
+"time": {
+    "ago": "ago",
+    "day": "day",
+    "days": "days",
+    "month": "month",
+    "months": "months",
+    "year": "year",
+    "years": "years",
+    "hour": "hour",
+    "hours": "hours",
+    "minute": "minute",
+    "minutes": "minutes",
+    "second": "second",
+    "seconds": "seconds"
   }
+
 }
