--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -1,62 +1,62 @@
 {
-  "welcomeTopBarTitle":"Tableau de bord",
+  "welcomeTopBarTitle": "Tableau de bord",
   "welcome_desc": "Bon retour! Voici ce qui se passe avec votre plateforme de médiation de paiement.",
-  "appName":"Unumpay",
+  "appName": "Unumpay",
   "tagline": "Médiation de paiement",
-  "error":"Erreur",
-  "transactionTopBarTitle":"Transactions",
-  "transaction_desc":"Surveillez et gérez toutes les transactions de paiement.",
-  "advancePaymentTopBarTitle":"Paiement anticipé",
-  "advancePayment_desc":"Surveillez et gérez tous les paiements anticipés.",
-  "ReconciliationReportTopBarTitle":"Rapport de rapprochement",
-  "ReconciliationReport_desc":"Surveillez et gérez vos rapports de rapprochement.",
+  "error": "Erreur",
+  "transactionTopBarTitle": "Transactions",
+  "transaction_desc": "Surveillez et gérez toutes les transactions de paiement.",
+  "advancePaymentTopBarTitle": "Paiement anticipé",
+  "advancePayment_desc": "Surveillez et gérez tous les paiements anticipés.",
+  "ReconciliationReportTopBarTitle": "Rapport de rapprochement",
+  "ReconciliationReport_desc": "Surveillez et gérez vos rapports de rapprochement.",
   "PaymentServiceProvidersTopBarTitle": "Fournisseurs de services de paiement",
   "PaymentServiceProviders_desc": "Configurez et gérez vos passerelles de paiement",
   "SettingsTopBarTitle": "Paramètres de rapprochement",
   "Settings_desc": "Configurer et gérer vos passerelles de paiement",
-  "ErrorTopBarTitle":"Erreur",
-  "Error_desc":"Session expirée, rouvrez l'application !",
-  "NotFoundTitle":"Page non trouvée",
-  "NotFound_desc":"La page que vous recherchez n’existe pas.",
-  "FirstNavTitle":"Tableau de bord",
-  "SecondNavTitle":"Transactions",
-  "ThirdNavTitle":"Paiement anticipé",
-  "FourthNavTitle":"Rapport de rapprochement",
-  "FifthNavTitle":"Fournisseurs de services de paiement",
+  "ErrorTopBarTitle": "Erreur",
+  "Error_desc": "Session expirée, rouvrez l'application !",
+  "NotFoundTitle": "Page non trouvée",
+  "NotFound_desc": "La page que vous recherchez n’existe pas.",
+  "FirstNavTitle": "Tableau de bord",
+  "SecondNavTitle": "Transactions",
+  "ThirdNavTitle": "Paiement anticipé",
+  "FourthNavTitle": "Rapport de rapprochement",
+  "FifthNavTitle": "Fournisseurs de services de paiement",
   "SixthNavTitle": "Paramètres",
-  "welcomePageTitle":"Bienvenue sur UnumPay",
-  "welcomePageCaption":"Vous y êtes presque !",
-  "welcomePageDesc":"Pour commencer à accepter les paiements, veuillez configurer votre fournisseur de services de paiement (PSP) dans les Paramètres en utilisant le compte que vous possédez déjà. Cela complétera l'intégration et activera les paiements par carte sur votre boutique.",
-  "welcomePageButtonTitle":"Aller aux paramètres de configuration",
-  "errorPageTitle":"Session expirée, veuillez rouvrir l'application !",
-  "errorPageCaption":"Oups !",
-  "errorPageDesc":"Vous n'avez pas l'autorisation d'accéder au document ou au programme que vous avez demandé.",
-  "notFoundPageTitle":"404 - Page non trouvée",
+  "welcomePageTitle": "Bienvenue sur UnumPay",
+  "welcomePageCaption": "Vous y êtes presque !",
+  "welcomePageDesc": "Pour commencer à accepter les paiements, veuillez configurer votre fournisseur de services de paiement (PSP) dans les Paramètres en utilisant le compte que vous possédez déjà. Cela complétera l'intégration et activera les paiements par carte sur votre boutique.",
+  "welcomePageButtonTitle": "Aller aux paramètres de configuration",
+  "errorPageTitle": "Session expirée, veuillez rouvrir l'application !",
+  "errorPageCaption": "Oups !",
+  "errorPageDesc": "Vous n'avez pas l'autorisation d'accéder au document ou au programme que vous avez demandé.",
+  "notFoundPageTitle": "404 - Page non trouvée",
   "contact_detail_warning_desc": "Veuillez fournir les coordonnées du décideur dans les paramètres. Nous utilisons ces informations pour vous contacter concernant des mises à jour importantes, des problèmes de paiement ou des besoins de vérification.",
-  "stats_data_loaded":"Données chargées avec succès",
-  "stats_api_error":"Quelque chose s'est mal passé",
-  "total_revenue_heading":"Revenu total",
-  "total_revenue_tooltip_desc":"Le revenu total inclut toutes les transactions réussies",
-  "transactions_heading":"Transactions",
-  "transactions_tooltip_desc":"Nombre total de transactions tentées par rapport à celles réussies.",
+  "stats_data_loaded": "Données chargées avec succès",
+  "stats_api_error": "Quelque chose s'est mal passé",
+  "total_revenue_heading": "Revenu total",
+  "total_revenue_tooltip_desc": "Le revenu total inclut toutes les transactions réussies",
+  "transactions_heading": "Transactions",
+  "transactions_tooltip_desc": "Nombre total de transactions tentées par rapport à celles réussies.",
   "so_far_in": "jusqu’à présent en",
-  "successful_ransactions":"Transactions réussies",
+  "successful_ransactions": "Transactions réussies",
   "success_rate_tooltip_desc": "Le taux de réussite est basé sur le rapport entre les transactions réussies et le nombre total de tentatives.",
   "success_rate_heading": "Taux de réussite",
   "last_month_success_rate": "Taux de réussite du mois dernier",
   "in_progress_tooltip_desc": "Transactions en cours et non encore terminées.",
   "in_progress_heading": "Transactions en cours",
   "amount_of_transactions": "Nombre de transactions",
-  "payment_trend_title":"Tendances de paiement",
-  "payment_trend_desc":"Revenus et volume des transactions au fil du temps",
-  "6months":"6 mois",
-  "1year":"1 an",
-   "chart": {
+  "payment_trend_title": "Tendances de paiement",
+  "payment_trend_desc": "Revenus et volume des transactions au fil du temps",
+  "6months": "6 mois",
+  "1year": "1 an",
+  "chart": {
     "revenue": "Revenu",
     "transactions": "Transactions",
     "unumpay_fee": "Frais Unumpay"
   },
-   "months": {
+  "months": {
     "january": "Janvier",
     "february": "Février",
     "march": "Mars",
@@ -69,5 +69,35 @@
     "october": "Octobre",
     "november": "Novembre",
     "december": "Décembre"
+  },
+  "Success": "succès",
+  "Pending": "en attente",
+  "recent_transactions": {
+    "title": "Transactions récentes",
+    "desc": "Dernières transactions de paiement sur tous les prestataires de services de paiement."
+  },
+  "payment_providers": {
+    "title": "Fournisseurs de paiement",
+    "desc": "Prestataires de services de paiement configurés.",
+    "button":"Gérer",
+    "transactions":"transactions",
+    "unumpay-charges":"Frais Unumpay",
+    "Active":"Actif",
+    "Inactive":"Inactif"
+  },
+  "time": {
+    "ago": "il y a",
+    "day": "jour",
+    "days": "jours",
+    "month": "mois",
+    "months": "mois",
+    "year": "an",
+    "years": "ans",
+    "hour": "heure",
+    "hours": "heures",
+    "minute": "minute",
+    "minutes": "minutes",
+    "second": "seconde",
+    "seconds": "secondes"
   }
-} 
+}
